my second project

--- a/archives.html
+++ b/archives.html
@@ -15,12 +15,15 @@
                 <h1><a href="/">testpelican </a></h1>
                 <nav><ul>
                     <li><a href="/category/review.html">Review</a></li>
+                    <li><a href="/category/tuples.html">Tuples</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for testpelican</h1>
 
 <dl>
+    <dt>Tue 28 June 2016</dt>
+    <dd><a href="/my-second-project.html">My Second Project</a></dd>
     <dt>Fri 03 December 2010</dt>
     <dd><a href="/my-first-review.html">My First Review</a></dd>
 </dl>
