--- a/authors.html
+++ b/authors.html
@@ -15,13 +15,14 @@
                 <h1><a href="/">testpelican </a></h1>
                 <nav><ul>
                     <li><a href="/category/review.html">Review</a></li>
+                    <li><a href="/category/tuples.html">Tuples</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on testpelican</h1>
     <ul>
-        <li><a href="/author/abhishek.html">abhishek</a> (1)</li>
+        <li><a href="/author/abhishek.html">abhishek</a> (2)</li>
     </ul>
 </section>
 
